--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,39 @@
+*{
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  font-family: montserrat;
+  box-sizing: border-box;
+}
+
 .plus-sign{
   height: 50px;
   width: auto;
 }
-body{
+
+.app-container{
   display: flex;
+  flex-direction: column;
   align-content: center;
   text-align: center;
   justify-content: center;
+}
+body{
+  min-height: 100vh;
+  background-image: linear-gradient(120deg,#3498db,#8e44ad);
+}
+.main-title{
+  font-size: 400%;
+  color:#fff;
+  -webkit-animation: glow 1s ease-in-out infinite alternate;
+  -moz-animation: glow 1s ease-in-out infinite alternate;
+  animation: glow 1s ease-in-out infinite alternate;
+}
+@-webkit-keyframes main-title{
+  from{
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+  }
+  to{
+    text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+  }
 }
