--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-*{
+* {
   margin: 0;
   padding: 0;
   text-decoration: none;
@@ -6,34 +6,95 @@
   box-sizing: border-box;
 }
 
-.plus-sign{
+.plus-sign {
   height: 50px;
   width: auto;
 }
 
-.app-container{
+.app-container {
   display: flex;
   flex-direction: column;
   align-content: center;
   text-align: center;
   justify-content: center;
+  /*  */
 }
-body{
-  min-height: 100vh;
-  background-image: linear-gradient(120deg,#3498db,#8e44ad);
-}
-.main-title{
-  font-size: 400%;
-  color:#fff;
-  -webkit-animation: glow 1s ease-in-out infinite alternate;
-  -moz-animation: glow 1s ease-in-out infinite alternate;
-  animation: glow 1s ease-in-out infinite alternate;
-}
-@-webkit-keyframes main-title{
-  from{
-    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
-  }
-  to{
-    text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+
+/*  */
+@-webkit-keyframes scroll {
+  100% {
+    background-position: 0px -3000px;
   }
 }
+
+@-moz-keyframes scroll {
+  100% {
+    background-position: 0px -3000px;
+  }
+}
+
+@-o-keyframes scroll {
+  100% {
+    background-position: 0px -3000px;
+  }
+}
+
+@-ms-keyframes scroll {
+  100% {
+    background-position: 0px -3000px;
+  }
+}
+
+@keyframes scroll {
+  100% {
+    background-position: 0px -3000px;
+  }
+}
+
+body {
+  /*background-color: #3E69C3;
+  height: 100vh;
+  background-image: linear-gradient(120deg, #3498db, #8e44ad); 
+  background-image: url(http://scarbroughstudios.com/img/codepen.svg);
+  background-position: center center;
+  background-size: 500px;  
+  @include animation(scrollBad 5s linear infinite);
+  */
+  background-color: #3e69c3;
+  position: fixed;
+  background: url(http://scarbroughstudios.com/img/codepen.svg);
+  -webkit-animation: 100s scroll infinite linear;
+  -moz-animation: 100s scroll infinite linear;
+  -o-animation: 100s scroll infinite linear;
+  -ms-animation: 100s scroll infinite linear;
+  animation: 100s scroll infinite linear;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+@keyframes blink {
+  0%,
+  100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+}
+.main-title {
+  color: black;
+  text-transform: uppercase;
+  font-size: 3rem;
+  margin-bottom: 22px;
+  animation: 3s linear infinite blink;
+  align-content: center;
+}
+.buttons {
+  font-size: 100%;
+  margin: 0 10px;
+  padding: 2px 10px;
+  border-radius: 3px;
+}
+
